# solo_lab_oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  methodology_dispute.md
cache-lab/: README.md  requirements.txt
cache-lab/fixtures/: sample_summary.md
cache-lab/src/: cache_lab.py  cache_lab_summary.py
cache-lab/tests/: test_cache_lab.py
opus-4-7-context-test/: LICENSE  README.md
opus-4-7-context-test/.github/workflows/: ci.yml
opus-4-7-context-test/fixtures/: anonymized_questions.json  sample_questions.json
opus-4-7-context-test/fixtures/sample_repo/: README.md  pipeline.py  subtitle_lib.py  video_lib.py  voice_lib.py
opus-4-7-context-test/src/: benchmark_opus_47.py  context_loader.py  llm_client.py  report_run.py  score_run.py
opus-4-7-context-test/tests/: test_auto_score_needle.py
pr-review-bot/: .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh
pr-review-bot/.github/workflows/: ci.yml
pr-review-bot/docs/: api.md
pr-review-bot/examples/: clean-pr.md  sample-review-comment.md  workflow.yml
pr-review-bot/tests/: smoke.sh  test_action_yaml.py
ru-pulse/: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STAGING_REPORT.md  pyproject.toml  requirements.txt
ru-pulse/.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md
ru-pulse/.github/ISSUE_TEMPLATE/: bug_report.md  channel_proposal.md  feature_request.md
ru-pulse/.github/workflows/: ci.yml
ru-pulse/ru_pulse/: analyze.py  channels.txt  daily_incremental.py  dashboard.py  diaspora_lens.py  fetch.py  probe.py  publish_to_tg.py  sanitize.py  storage.py  topics.py  verify.py  voice_fingerprint.py  voice_lint.py  weekly_pulse.py
ru-pulse/ru_pulse/tests/: test_analyze.py  test_daily_incremental.py  test_diaspora_lens.py  test_fetch_run.py  test_parser.py  test_publish_to_tg.py  test_sanitize_fuzz.py  test_storage.py  test_topics.py  test_voice_fingerprint.py  test_voice_lint.py  test_weekly_pulse.py
structural-judge/: .gitignore  README.md  pyproject.toml
structural-judge/.github/workflows/: ci.yml
structural-judge/src/: __init__.py  structural_judge.py
structural-judge/tests/: test_pure_logic.py
zone-renderer/: CHANGELOG.md  README.md  pyproject.toml
zone-renderer/.github/workflows/: ci.yml
zone-renderer/examples/: quote_pull.html  render_example.py
zone-renderer/src/: __init__.py  zone_renderer.py
zone-renderer/tests/: test_render_template.py
