[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zone-renderer"
version = "0.1.0"
description = "Playwright-based zone renderer with auto-fit text sizing for editorial templates."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Solo Lab" }]
dependencies = ["playwright>=1.44,<2"]

[project.urls]
Homepage = "https://github.com/sololabdev/solo_lab_oss"
Source = "https://github.com/sololabdev/solo_lab_oss/tree/main/zone-renderer"

[tool.setuptools]
package-dir = { zone_renderer = "src" }
packages = ["zone_renderer"]
